Bug 165119 - [UI] Calc function wizard issue with CHOOSECOLS() and CHOOSEROWS()
Summary: [UI] Calc function wizard issue with CHOOSECOLS() and CHOOSEROWS()
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.8.0
Keywords: implementationError
Depends on:
Blocks: Function-Wizard Cell-Formula
  Show dependency treegraph
 
Reported: 2025-02-08 01:35 UTC by Olivier Hallot
Modified: 2025-08-23 11:00 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of the Calc function dialog on CHOOSECOLS() (81.57 KB, image/png)
2025-02-08 01:35 UTC, Olivier Hallot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2025-02-08 01:35:23 UTC
Created attachment 199064 [details]
screenshot of the Calc function dialog on CHOOSECOLS()

Image says all, the Calc function wizard for CHOOSECOLS and CHOOSEROWS displays a numeric sequence that is not sequential.

current results

For CHOOSEROWS
Row 1
Row 21
Row 22
...

For CHOOSECOLS
Column 1
Column 21
Column 22
...

expected result

For CHOOSEROWS
Row 1
Row 2
Row 3
...

For CHOOSECOLS
Column 1
Column 2
Column 3
...

Additional info:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c750e4fbff376152e793ff3ca43e808cd573b0bf
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: kf5 (cairo+wayland)
Locale: pt-BR (pt_BR.UTF-8); UI: pt-BR
Calc: threaded
Comment 1 raal 2025-02-08 12:39:37 UTC
Confirm with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7cd00ca413da8d29f54749c04493e85937a2fa38
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded


CC to Xisco, bug 151000 and bug 150999
Comment 2 Werner Tietz 2025-02-10 16:58:40 UTC
confirmed with:

Version: 25.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: c10dbe07b7def2eebd8eed3874c3df9b9d37fa41
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
(compiled from source)
Comment 3 Commit Notification 2025-02-11 19:58:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a2fec66b5f2c527b79db312135e3691bb8b56ac

tdf#165119: fix number of parameters in CHOOSECOLS/CHOOSEROWS

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-02-12 22:11:39 UTC
Olivier Hallot committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1be7c7a3f200cab41cb718399e39e7e13e45aa2e

tdf#165119 Also fix # of param for VSTACK, HSTACK

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.