tdf#165119: fix number of parameters in CHOOSECOLS/CHOOSEROWS

Change-Id: I39fee81e0fc8aaa33265a3539bd4e6dff5d9d2e8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181439
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>