sc/source/core/tool/parclass.cxx
@@ -57,8 +57,8 @@ const ScParameterClassification::RawData ScParameterClassification::pRawData[] =
     { ocIfError,         {{ Array, Reference                                     }, 0, Value }},
     { ocIfNA,            {{ Array, Reference                                     }, 0, Value }},
     { ocChoose,          {{ Array, Reference                                     }, 1, Value }},
-    { ocChooseCols,      {{ ReferenceOrRefArray, ReferenceOrRefArray, ReferenceOrRefArray, }, 2, ForceArrayReturn }},
-    { ocChooseRows,      {{ ReferenceOrRefArray, ReferenceOrRefArray, ReferenceOrRefArray, }, 2, ForceArrayReturn }},
+    { ocChooseCols,      {{ ReferenceOrRefArray, ReferenceOrRefArray             }, 1, ForceArrayReturn }},
+    { ocChooseRows,      {{ ReferenceOrRefArray, ReferenceOrRefArray             }, 1, ForceArrayReturn }},
     { ocLet,             {{ Value, ReferenceOrRefArray, ReferenceOrRefArray, }, 2, ForceArrayReturn } },
     // Other specials.
     { ocArrayClose,      {{ Bounds                                               }, 0, Bounds }},
